# ads-roller

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/2019-12-19-014324_create_banners/: down.sql  up.sql
resources/: banners.csv
src/: ads.rs  db.rs  lib.rs  models.rs  schema.rs
