[package]
name = "ads_roller"
version = "0.1.0"
authors = ["Maxim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.3", features = ["postgres"]}
dotenv = "0.15.0"
csv = "1.1.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.7.2"
rocket = "0.4.2"
